--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!------------------------------------------------->
+  <link rel="shortcut icon" href="./assets/logos/puntomx_ico.ico" type="image/x-icon">
+  <!------------------------------------------------->
   <!----------------------Meta tags para recargar archivos de servidor sin Cache--------------------------->
   <!--
   <meta http-equiv='cache-control' content='no-cache'>
@@ -41,8 +44,6 @@
   <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
   <meta name="twitter:url" content="https://hotelespuntomx.com/" />
   <meta name="twitter:card" content="" />
-
-  <!------------------------------------------------->
   <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
   <!------------------------------------------------->
