--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!------------------------------------------------->
-  <link rel="shortcut icon" href="./assets/logos/puntomx_ico.ico" type="image/x-icon">
+  <link rel="icon" href="https://hotelespuntomx.com/punto_mx.ico">
   <!------------------------------------------------->
   <!----------------------Meta tags para recargar archivos de servidor sin Cache--------------------------->
   <!--
@@ -966,10 +966,6 @@
 <script src="js/custom.js"></script>
 <script src="js/particles.js"></script>
 <script>
-  window.onload = function() {
-    Particles.init({selector: '.myheart-flotante'});
-  };
-
   $(document).ready(function() {
     $('#modalSep').modal('show');
   });
