--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!------------------------------------------------->
-  <link rel="icon" href="https://hotelespuntomx.com/punto_mx.ico">
+  <link rel="icon" href="assets/logos/HPMx.png">
   <!------------------------------------------------->
   <!----------------------Meta tags para recargar archivos de servidor sin Cache--------------------------->
   <!--
