--- a/firmas_t.html
+++ b/firmas_t.html
@@ -35,20 +35,37 @@
                    style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Tahoma;">
                 <tbody>
                 <tr>
-                    <td width="100" style="vertical-align: middle;"><span
-                            class="template3__ImageContainer-sc-vj949k-0 jeScQV"
-                            style="margin-right: 1px; display: block;"><img
-                            src="https://hotelespuntomx.com/images/certTABG.png"
-                            role="presentation" width="130" class="image__StyledImage-sc-hupvqm-0 gYgOut"
-                            style="max-width: 100px;"></span></td>
+                    <td width="100" style="vertical-align: middle;">
+                        <table cellpadding="0" cellspacing="0" class="table__StyledTable-sc-1avdl6r-0 kAbRZI"
+                               style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Tahoma;">
+                            <tbody style="text-align: center!important;">
+                            <tr>
+                                <p style="font-weight: bold; font-size: 10px; font-family: Tahoma; text-align: center;">
+                                    <span>Hoteles Punto Mx</span>
+                                </p>
+                            </tr>
+                            <tr>
+                                <span
+                                        class="template3__ImageContainer-sc-vj949k-0 jeScQV"
+                                        style="margin-right: 1px; display: block;"><img
+                                        src="https://hotelespuntomx.com/images/certTABG.png"
+                                        role="presentation" width="130" class="image__StyledImage-sc-hupvqm-0 gYgOut"
+                                        style="max-width: 100px;"></span>
+                            </tr>
+                            <tr>
+                                
+                            </tr>
+                            </tbody>
+                        </table>
+                    </td>
                     <td width="30">
                         <div style="width: 30px;"></div>
                     </td>
                     <td color="#005455" direction="vertical" width="1" height="auto"
                         class="color-divider__Divider-sc-1h38qjv-0 llIisW"
                         style="width: 1px; border-bottom: none; border-left: 1px solid rgb(0, 84, 85);"></td>
-                    <td width="30">
-                        <div style="width: 30px;"></div>
+                    <td width="20">
+                        <div style="width: 20px;"></div>
                     </td>
                     <td style="vertical-align: middle;">
                         <table cellpadding="0" cellspacing="0" class="table__StyledTable-sc-1avdl6r-0 kAbRZI"
