--- a/firmas_t.html
+++ b/firmas_t.html
@@ -5,7 +5,7 @@
     <title>Firmas - Prop</title>
 </head>
 <body>
-<table align='center' cellpadding="0" cellspacing="0" class="table__StyledTable-sc-1avdl6r-0 kAbRZI"
+<table cellpadding="0" cellspacing="0" class="table__StyledTable-sc-1avdl6r-0 kAbRZI"
        style="width: 400px; vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Tahoma;">
     <tbody>
     <tr style="border-radius: 20px!important; border: 1px solid black!important;">
@@ -52,8 +52,53 @@
                                         role="presentation" width="130" class="image__StyledImage-sc-hupvqm-0 gYgOut"
                                         style="max-width: 100px;"></span>
                             </tr>
-                            <tr>
-                                
+                            <tr style="text-align: center;">
+                                <td><a href="https://www.facebook.com/HotelPuntoMX/" target="_blank" color="#00a8ab"
+                                       class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+                                       style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);border-radius: 50%;"><img
+                                        src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/facebook-icon-2x.png"
+                                        alt="facebook" color="#00a8ab" height="24"
+                                        class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                                        style="background-color: rgb(0, 168, 171); display: block;border-radius: 50%;"></a>
+                                </td>
+                                <td width="5">
+                                    <div></div>
+                                </td>
+                                <td><a href="https://www.instagram.com/hotelpuntomx/" target="_blank" color="#00a8ab"
+                                       class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+                                       style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);border-radius: 50%;"><img
+                                        src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/instagram-icon-2x.png"
+                                        alt="instagram" color="#00a8ab" height="24"
+                                        class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                                        style="background-color: rgb(0, 168, 171); display: block;border-radius: 50%;"></a>
+                                </td>
+                                <td width="5">
+                                    <div></div>
+                                </td>
+                                <td><a href="https://twitter.com/hotel_puntomx" target="_blank" color="#00a8ab"
+                                       class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+                                       style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);border-radius: 50%;"><img
+                                        src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/twitter-icon-2x.png"
+                                        alt="twitter" color="#00a8ab" height="24"
+                                        class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                                        style="background-color: rgb(0, 168, 171); display: block;border-radius: 50%;"></a>
+                                </td>
+                                <td width="5">
+                                    <div></div>
+                                </td>
+                                <td>
+                                    <a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html?m=19905"
+                                       target="_blank"
+                                       color="#00a8ab" class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+                                       style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);border-radius: 50%;"><img
+                                            src="https://hotelespuntomx.com/images/ta_ico.png"
+                                            alt="tripadvisor" color="#00a8ab" height="24"
+                                            class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                                            style="background-color: rgb(0, 168, 171); display: block;border-radius: 50%;"></a>
+                                </td>
+                                <td width="5">
+                                    <div></div>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
@@ -715,5 +760,62 @@
     </tbody>
 </table>
 <!-------Fin prueba 2------>
+
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid animi aperiam aspernatur autem fuga iste
+    labore laboriosam, magnam nemo nobis odio quidem recusandae repellendus similique soluta tempora ullam velit!</p>
+<br><br>
+<table cellpadding="0" cellspacing="0" class=""
+       style="display: inline-block; vertical-align: -webkit-baseline-middle; font-family: Tahoma;">
+    <tbody>
+    <tr style="text-align: center;">
+        <td><a href="https://www.facebook.com/HotelPuntoMX/" color="#00a8ab"
+               class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+               style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);"><img
+                src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/facebook-icon-2x.png"
+                alt="facebook" color="#00a8ab" height="24"
+                class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                style="background-color: rgb(0, 168, 171); display: block;"></a>
+        </td>
+        <td width="5">
+            <div></div>
+        </td>
+        <td><a href="https://twitter.com/hotel_puntomx" color="#00a8ab"
+               class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+               style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);"><img
+                src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/twitter-icon-2x.png"
+                alt="twitter" color="#00a8ab" height="24"
+                class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                style="background-color: rgb(0, 168, 171); display: block;"></a>
+        </td>
+        <td width="5">
+            <div></div>
+        </td>
+        <td>
+            <a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html?m=19905"
+               color="#00a8ab" class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+               style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);"><img
+                    src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/linkedin-icon-2x.png"
+                    alt="linkedin" color="#00a8ab" height="24"
+                    class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                    style="background-color: rgb(0, 168, 171); display: block;"></a>
+        </td>
+        <td width="5">
+            <div></div>
+        </td>
+        <td><a href="https://www.instagram.com/hotelpuntomx/" color="#00a8ab"
+               class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+               style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);"><img
+                src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/instagram-icon-2x.png"
+                alt="instagram" color="#00a8ab" height="24"
+                class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                style="background-color: rgb(0, 168, 171); display: block;"></a>
+        </td>
+        <td width="5">
+            <div></div>
+        </td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
