Corrección meta tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!------------------------------------------------->
   <title>Inicio | Hotel Punto MX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Hoteles PUNTO MX" />
+  <meta name="title" content="Hoteles PUNTO MX" />
   <meta name="description" content="El punto más cómodo de México" />
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
   <meta name="author" content="eknr" />
@@ -44,7 +44,7 @@
   <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
   <meta name="twitter:url" content="https://hotelespuntomx.com/" />
   <meta name="twitter:card" content="" />
-  <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
+  <!--<link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">-->
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
   <!------------------------------------------------->
   <!-- Stylesheets -->
