--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <!------------------------------------------------->
   <link rel="icon" href="assets/logos/HPMx.png">
   <!------------------------------------------------->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WJG6GSM9');</script>
+  <!-- End Google Tag Manager -->
+  <!------------------------------------------------->
   <!----------------------Meta tags para recargar archivos de servidor sin Cache--------------------------->
   <!--
   <meta http-equiv='cache-control' content='no-cache'>
