--- a/rooms.html
+++ b/rooms.html
@@ -17,6 +17,23 @@
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES MÉXICO, VISITA MÉXICO"/>
     <meta name="author" content="eknr"/>
     <!--Completado-->
+    <!------------------------------------------------->
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WJG6GSM9');</script>
+    <!-- End Google Tag Manager -->
+    <!------------------------------------------------->
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
