--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <title>Inicio | Hotel Punto MX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="title" content="Hoteles PUNTO MX" />
-  <meta name="description" content="El punto más cómodo de México" />
+  <meta name="description" content="Si viajas a la ciudad de México hospedate en hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
   <meta name="author" content="eknr" />
   <!--Completado-->
@@ -46,7 +46,7 @@
   <meta property="og:image" content="https://hotelespuntomx.com/assets/webp/DELUXE_2_CAMAS_5.jpeg"/>
   <meta property="og:url" content="https://hotelespuntomx.com/"/>
   <meta property="og:site_name" content="Hoteles Punto MX"/>
-  <meta property="og:description" content="El punto más cómodo de México"/>
+  <meta property="og:description" content="Si viajas a la ciudad de México hospedate en hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
   <meta name="twitter:title" content="Hotel Punto MX" />
   <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
   <meta name="twitter:url" content="https://hotelespuntomx.com/" />
@@ -80,6 +80,10 @@
   <!------------------------------------------------->
 </head>
 <body class="mybody">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJG6GSM9"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!------ modals ------->
 <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
