--- a/cafe.html
+++ b/cafe.html
@@ -61,6 +61,12 @@
     <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body class="mybody">
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJG6GSM9"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!------ modals ------->
 <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
      aria-hidden="true">
