--- a/cafe.html
+++ b/cafe.html
@@ -12,8 +12,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Café MX - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website Hoteles PUNTO MX"/>
-    <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
+    <meta name="description"
+          content="La tradición en Café MX se ve reflejada como lugar de reunión, para discutir y pasar el tiempo; no pretendemos ser sólo un sitio para consumir, somos el punto donde, con la excusa del café, se pasa el tiempo."/>
+    <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, Café, Hotel, Terraza, Café"/>
     <meta name="author" content="eknr"/>
     <!--Completado-->
     <!------------------------------------------------->
