--- a/cdmx.html
+++ b/cdmx.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cónoce la CDMX - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website Hoteles PUNTO MX"/>
+    <meta name="title" content="Conoce la CDMX">
+    <meta name="description"
+          content="Aquí encontrarás un resumen del clima actualizado en nuestra amada ciudad, con el fin de que tengas una idea de las condiciones climatológicas durante tu estancia ¡y que no te tome desprevenido!"/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <!------------------------------------------------->
