--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
           'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-WJG6GSM9');</script>
   <!-- End Google Tag Manager -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWCT951Z6Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-BWCT951Z6Z');
+  </script>
   <!------------------------------------------------->
   <!----------------------Meta tags para recargar archivos de servidor sin Cache--------------------------->
   <!--
