--- a/cdmx.html
+++ b/cdmx.html
@@ -26,6 +26,19 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WJG6GSM9');</script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWCT951Z6Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-BWCT951Z6Z');
+    </script>
     <!------------------------------------------------->
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
