GTag - Analytics y Descripción

--- a/menus.html
+++ b/menus.html
@@ -12,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Conoce nuestros menús | Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website Hoteles PUNTO MX"/>
+    <meta name="description" content="Conoce nuestros Menús"/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <!------------------------------------------------->
@@ -46,11 +46,11 @@
     </script>
     <!------------------------------------------------->
     <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content=""/>
+    <meta property="og:title" content="Hotel Punto MX - Menús"/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
     <meta property="og:site_name" content=""/>
-    <meta property="og:description" content=""/>
+    <meta property="og:description" content="Conoce nuestros menús"/>
     <meta name="twitter:title" content="El punto más cómodo de México || Hotel Punto MX"/>
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
