--- a/paquetes.html
+++ b/paquetes.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Paquetes - Hotel PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website Hoteles PUNTO MX"/>
-    <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
+    <meta name="description"
+          content="Reserva uno de nuestros Tours y vive la experiencia en Hotel Punto MX | El lugar más cómodo de México"/>
+    <meta name="keywords"
+          content="Hoteles, CDMX, PUNTOMX, TURISTA, Tours, Tehotihuacán, Puebla, Visita México, Vacaciones México"/>
     <meta name="author" content="eknr"/>
     <!--Completado-->
     <!------------------------------------------------->
