--- a/restaurant.html
+++ b/restaurant.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<html lang="es"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Restaurante MX - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website Hoteles PUNTO MX"/>
+    <link rel="shortcut icon" href="assets/logos/HPMx.png" type="image/x-icon">
+    <meta name="description"
+          content="Si nos visitas a la hora del desayuno, podrás servirte de un variado buffet; y si piensas en la comida o en la cena, podrás ordenar a la carta todos los días."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <!------------------------------------------------->
@@ -31,15 +26,29 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WJG6GSM9');</script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWCT951Z6Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-BWCT951Z6Z');
+    </script>
     <!------------------------------------------------->
     <!--Completado-->
     <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content=""/>
+    <meta property="og:title" content="Restaurante MX - Ven y vive el sabor de la CDMX"/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
     <meta property="og:site_name" content=""/>
-    <meta property="og:description" content=""/>
-    <meta name="twitter:title" content=""/>
+    <meta property="og:description"
+          content="Si nos visitas a la hora del desayuno, podrás servirte de un variado buffet; y si piensas en la comida o en la cena, podrás ordenar a la carta todos los días."/>
+    <meta name="twitter:title" content="Restaurante MX | Ven y vive el sabor de la CDMX"/>
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
     <meta name="twitter:card" content=""/>
