--- a/rooms.html
+++ b/rooms.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js lt-ie9"> <![endif]-->
+<!DOCTYPE>
 <!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<html lang="es"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Habitaciones - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/logos/HPMx.png" type="image/x-icon">
     <meta name="description"
-          content="Ven y conoce nuestras habitaciones. Hoteles Punto MX el punto más cómodo de México."/>
+          content="Ven conoce nuestras habitaciones y descubre por qué Hotel Punto MX es el punto más cómodo de México."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES MÉXICO, VISITA MÉXICO"/>
     <meta name="author" content="eknr"/>
     <!--Completado-->
@@ -33,14 +28,28 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WJG6GSM9');</script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWCT951Z6Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-BWCT951Z6Z');
+    </script>
     <!------------------------------------------------->
     <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content=""/>
+    <meta property="og:title" content="Hotel Punto MX - Conoce nuestras habitaciones"/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content="hotelpuntomx.com"/>
     <meta property="og:site_name" content="Hotel Punto MX"/>
-    <meta property="og:description" content="El punto más cómodo de México"/>
-    <meta name="twitter:title" content=""/>
+    <meta property="og:description"
+          content="Todas nuestras habitaciones están decoradas con un estilo moderno y elegante. Incluyen comodidades como Wi-Fi gratuito y Smart TV y cafeteras, para proporcionar la mejor comodidad y descanso en el Centro Histórico de la Ciudad de México."/>
+    <meta name="twitter:title" content="Hotel Punto MX - Conoce nuestras habitaciones"/>
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
     <meta name="twitter:card" content=""/>
