--- a/services.html
+++ b/services.html
@@ -12,7 +12,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Servicios | Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website Hoteles PUNTO MX"/>
+    <link rel="shortcut icon" href="assets/logos/HPMx.png" type="image/x-icon">
+    <meta name="description" content="Conoce nuestro menú de almohadas, tours y rooms service las 24 hrs."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <!------------------------------------------------->
@@ -31,15 +32,28 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WJG6GSM9');</script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWCT951Z6Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-BWCT951Z6Z');
+    </script>
     <!------------------------------------------------->
     <!--Completado-->
     <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content=""/>
+    <meta property="og:title" content="Hotel Punto MX - Conoce nuestro menú de Almohadas"/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
     <meta property="og:site_name" content=""/>
     <meta property="og:description" content=""/>
-    <meta name="twitter:title" content=""/>
+    <meta name="twitter:title" content="Hotel Punto MX - Conoce nuestro menú de Almohadas"/>
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
     <meta name="twitter:card" content=""/>
