--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
   <meta http-equiv='pragma' content='no-cache'>
   -->
   <!------------------------------------------------->
-  <title>Hotel Punto MX | El punto más cómodo de México</title>
+  <title>Hotel Punto MX - El punto más cómodo de México</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="title" content="Hotel Punto MX" />
   <meta name="description" content="Si viajas a la ciudad de México hospedate en hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES, MÉXICO, CONOCE A MÉXICO"/>
   <meta name="author" content="EKNR" />
