--- a/services.html
+++ b/services.html
@@ -51,8 +51,8 @@
     <meta property="og:title" content="Hotel Punto MX - Conoce nuestro menú de Almohadas"/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
-    <meta property="og:site_name" content=""/>
-    <meta property="og:description" content=""/>
+    <meta property="og:site_name" content="Servicios y Amenidades - Hotel Punto Mx"/>
+    <meta property="og:description" content="Conoce nuestro menú de almohadas, tours y rooms service las 24 hrs."/>
     <meta name="twitter:title" content="Hotel Punto MX - Conoce nuestro menú de Almohadas"/>
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
