robots meta tags

--- a/cafe.html
+++ b/cafe.html
@@ -16,6 +16,7 @@
           content="La tradición en Café MX se ve reflejada como lugar de reunión, para discutir y pasar el tiempo; no pretendemos ser sólo un sitio para consumir, somos el punto donde, con la excusa del café, se pasa el tiempo."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, Café, Hotel, Terraza, Café"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!--Completado-->
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
