--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <meta name="description" content="Si viajas a la ciudad de México hospedate en hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES, MÉXICO, CONOCE A MÉXICO"/>
   <meta name="author" content="EKNR" />
+  <meta name="robots" content="index,follow"/>
   <!--Completado-->
   <!-- Facebook and Twitter integration -->
   <!--
