--- a/paquetes.html
+++ b/paquetes.html
@@ -10,6 +10,7 @@
     <meta name="keywords"
           content="Hoteles, CDMX, PUNTOMX, TURISTA, Tours, Tehotihuacán, Puebla, Visita México, Vacaciones México"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!--Completado-->
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
