--- a/restaurant.html
+++ b/restaurant.html
@@ -10,6 +10,7 @@
           content="Si nos visitas a la hora del desayuno, podrás servirte de un variado buffet; y si piensas en la comida o en la cena, podrás ordenar a la carta todos los días."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
