--- a/rooms.html
+++ b/rooms.html
@@ -11,6 +11,7 @@
           content="Ven conoce nuestras habitaciones y descubre por qué Hotel Punto MX es el punto más cómodo de México."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES MÉXICO, VISITA MÉXICO"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!--Completado-->
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
