--- a/roomservice.html
+++ b/roomservice.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Conoce nuestro menú de almohadas y nuestro Room Service las 24hrs."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
