--- a/cdmx.html
+++ b/cdmx.html
@@ -10,6 +10,7 @@
           content="Aquí encontrarás un resumen del clima actualizado en nuestra amada ciudad, con el fin de que tengas una idea de las condiciones climatológicas durante tu estancia ¡y que no te tome desprevenido!"/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
