--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
           content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064<"/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
