--- a/ng/menus.html
+++ b/ng/menus.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Conoce nuestros menús | Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website Hoteles PUNTO MX" />
-    <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
-    <meta name="author" content="eknr" />
+    <meta name="description" content="Website Hoteles PUNTO MX"/>
+    <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
+    <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
@@ -18,15 +23,16 @@
     <meta property="og:url" content=""/>
     <meta property="og:site_name" content=""/>
     <meta property="og:description" content=""/>
-    <meta name="twitter:title" content="El punto más cómodo de México || Hotel Punto MX" />
-    <meta name="twitter:image" content="" />
-    <meta name="twitter:url" content="" />
-    <meta name="twitter:card" content="" />
+    <meta name="twitter:title" content="El punto más cómodo de México || Hotel Punto MX"/>
+    <meta name="twitter:image" content=""/>
+    <meta name="twitter:url" content=""/>
+    <meta name="twitter:card" content=""/>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Dropdown Menu -->
     <link rel="stylesheet" href="css/superfish.css">
     <!-- Owl Slider -->
@@ -57,10 +63,10 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
-            box-sizing: border-box!important;
+            box-sizing: border-box !important;
         }
     </style>
 </head>
@@ -72,7 +78,9 @@
             <header id="fh5co-header-section">
                 <div class="container">
                     <div class="nav-header">
-                        <h1 id="fh5co-logo"><a href="index.html"><img src="assets/logos/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
+                        <h1 id="fh5co-logo"><a href="index.html"><img src="assets/logos/puntomx_ico.ico"
+                                                                      alt="Logo de Hoteles Punto MX" height="80px"
+                                                                      srcset=""></a></h1>
                         <nav id="fh5co-menu-wrap" role="navigation">
                             <ul class="sf-menu" id="fh5co-primary-menu">
                                 <!--<li><a class="active" href="index.html">Inicio</a></li>
@@ -87,7 +95,9 @@
                                 </li>
                                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
                                 <li><a href="contact.html">Contacto</a></li>-->
-                                <li><a href="https://hotelespuntomx-com.translate.goog/menus.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
+                                <li>
+                                    <a href="https://hotelespuntomx-com.translate.goog/menus.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp"
+                                       target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -96,7 +106,9 @@
 
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="min-height: 100vh!important; background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/SALMON.jpeg); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax"
+             style="min-height: 100vh!important; background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/SALMON.jpeg); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;"
+             data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row" style="margin-top: 100px;">
@@ -108,38 +120,52 @@
                                 <div class="col-10" style="padding-top: 5px;">
                                     <div class="col-lg-3 col-md-6 col-sm-12" style="padding-bottom: 15px;">
                                         <div class="card">
-                                            <img class="card-img-top" src="./assets/webp/CORTE.jpeg" alt="Restaurante MX - Menú">
+                                            <img class="card-img-top" src="./assets/webp/CORTE.jpeg"
+                                                 alt="Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Restaurante MX</h5>
-                                                <a href="./files/menus/110722_M_Restaurant.pdf" target="_blank" class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver Menú <i class="ti-angle-right"></i></a>
+                                                <a href="./files/menus/110722_M_Restaurant.pdf" target="_blank"
+                                                   class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver
+                                                    Menú <i class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-6 col-sm-12" style="padding-bottom: 15px;">
                                         <div class="card">
-                                            <img class="card-img-top" src="./assets/webp/CAFE_Y_BAGUETTE.jpeg" alt="Bebidas - Restaurante MX - Menú">
+                                            <img class="card-img-top" src="./assets/webp/CAFE_Y_BAGUETTE.jpeg"
+                                                 alt="Bebidas - Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Menú de bebidas</h5>
-                                                <a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver Menú <i class="ti-angle-right"></i></a>
+                                                <a href="./files/menus/110722_M_Bebidas.pdf" target="_blank"
+                                                   class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver
+                                                    Menú <i class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-6 col-sm-12" style="padding-bottom: 15px;">
                                         <div class="card">
-                                            <img class="card-img-top" src="./assets/webp/CAFE_Y_RED_VELVET.jpeg" alt="Cafe MX - Menú">
+                                            <img class="card-img-top" src="./assets/webp/CAFE_Y_RED_VELVET.jpeg"
+                                                 alt="Cafe MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Cafe MX</h5>
-                                                <a href="" class="btn btn-primary btn-luxe-primary" target="_blank" style="font-size: 1.1rem;">Ver Menú (Esp)<i class="ti-angle-right"></i></a>
-                                                <a href="" class="btn btn-primary btn-luxe-primary" target="_blank" style="font-size: 1.1rem;">Ver Menú (Eng)<i class="ti-angle-right"></i></a>
+                                                <a href="" class="btn btn-primary btn-luxe-primary" target="_blank"
+                                                   style="font-size: 1.1rem;">Ver Menú (Esp)<i
+                                                        class="ti-angle-right"></i></a>
+                                                <a href="" class="btn btn-primary btn-luxe-primary" target="_blank"
+                                                   style="font-size: 1.1rem;">Ver Menú (Eng)<i
+                                                        class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-6 col-sm-12" style="padding-bottom: 15px;">
                                         <div class="card">
-                                            <img class="card-img-top" src="./assets/webp/ROOM_SERVICE_2.jpeg" alt="Restaurante MX - Menú">
+                                            <img class="card-img-top" src="./assets/webp/ROOM_SERVICE_2.jpeg"
+                                                 alt="Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Room Service</h5>
-                                                <a href="./files/menus/110722_M_RoomService.pdf" target="_blank" class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;" >Ver Menú <i class="ti-angle-right"></i></a>
+                                                <a href="./files/menus/110722_M_RoomService.pdf" target="_blank"
+                                                   class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver
+                                                    Menú <i class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -201,9 +227,15 @@
 </div>
 
 <!-- Javascripts -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 <!--<script src="js/jquery-2.1.4.min.js"></script>-->
 <!-- Dropdown Menu -->
 <script src="js/hoverIntent.js"></script>
