--- a/restaurant2.html
+++ b/restaurant2.html
@@ -15,6 +15,7 @@
     <meta name="description" content="Website Hoteles PUNTO MX"/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!--Completado-->
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
