--- a/services.html
+++ b/services.html
@@ -16,6 +16,7 @@
     <meta name="description" content="Conoce nuestro menú de almohadas, tours y rooms service las 24 hrs."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
+    <meta name="robots" content="index,follow"/>
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
