Corrección de firmas

--- a/firmas_t.html
+++ b/firmas_t.html
@@ -17,13 +17,19 @@
                         role="presentation" width="130" class="image__StyledImage-sc-hupvqm-0 gYgOut"
                         style="display: inline; text-align: right; max-width: 130px;"></span></td>
         <td style="text-align: center; background-color: #00a8ab;border-top-right-radius: 30px; border-bottom-right-radius: 30px;">
-            <h2 color="#000000" class="name__NameContainer-sc-1m457h3-0 jxbGUj"
+            <!--<h2 color="#000000" class="name__NameContainer-sc-1m457h3-0 jxbGUj"
                 style="margin: 0px; font-size: 18px; color: rgb(255, 255, 255); font-weight: 600;">
                 <span>Moramay</span><span>&nbsp;</span><span>Rodríguez</span></h2>
             <p color="#000000" font-size="medium" class="job-title__Container-sc-1hmtp73-0 ifJNJc"
                style="margin: 0px; color: rgb(255, 255, 255); font-size: 14px; line-height: 22px;">
                 <span>GERENCIA GENERAL</span>
-            </p>
+
+            </p>-->
+            <img
+                    src="https://hotelespuntomx.com/images/mmr2.png"
+                    alt="mmr2" height="85"
+                    class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                    style="display: block;">
         </td>
     </tr>
     <tr>
@@ -89,12 +95,13 @@
                                 <td>
                                     <a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html?m=19905"
                                        target="_blank"
-                                       color="#00a8ab" class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
-                                       style="display: inline-block; padding: 0px; background-color: rgb(0, 168, 171);border-radius: 50%;"><img
-                                            src="https://hotelespuntomx.com/images/ta_ico.png"
-                                            alt="tripadvisor" color="#00a8ab" height="24"
-                                            class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
-                                            style="background-color: rgb(0, 168, 171); display: block;border-radius: 50%;"></a>
+                                       color="#000" class="social-links__LinkAnchor-sc-py8uhj-2 hBVWAh"
+                                       style="display: inline-block; padding: 0px; ">
+                                        <img
+                                                src="https://hotelespuntomx.com/images/ta_icono.png"
+                                                alt="tripadvisor" color="#000" height="24"
+                                                class="social-links__LinkImage-sc-py8uhj-1 hSTSwA"
+                                                style=" display: block;"></a>
                                 </td>
                                 <td width="5">
                                     <div></div>
