--- a/roomservice.html
+++ b/roomservice.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Room Service - Hotel PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="assets/logos/HPMx.png" type="image/x-icon">
     <meta name="description" content="Conoce nuestro menú de almohadas y nuestro Room Service las 24hrs."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
+    <link rel="icon" href="assets/logos/HPMx.png" type="image/x-icon">
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
