--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!------------------------------------------------->
   <title>Hotel Punto MX - El punto más cómodo de México</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Si viajas a la ciudad de México hospedate en hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
+  <meta name="description" content="Si viajas a la ciudad de México hospedate en Hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES, MÉXICO, CONOCE A MÉXICO"/>
   <meta name="author" content="EKNR" />
   <meta name="robots" content="index,follow"/>
