--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="no-js">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,12 +13,12 @@
   <meta name="distribution" content="global">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!-- Facebook and Twitter integration -->
-  <meta property="og:title" content="Hotel Punto MX"/>
+  <meta property="og:title" content="Hotel Punto MX - El punto más cómodo de México"/>
   <meta property="og:image" content="https://hotelespuntomx.com/assets/webp/DELUXE_2_CAMAS_5.jpeg"/>
   <meta property="og:url" content="https://hotelespuntomx.com/"/>
-  <meta property="og:site_name" content="Hoteles Punto MX"/>
+  <meta property="og:site_name" content="Hoteles Punto MX - El punto más cómodo de México"/>
   <meta property="og:description" content="Si viajas a la ciudad de México hospedate en hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
-  <meta name="twitter:title" content="Hotel Punto MX" />
+  <meta name="twitter:title" content="Hotel Punto MX - El punto más cómodo de México" />
   <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
   <meta name="twitter:url" content="https://hotelespuntomx.com/" />
   <meta name="twitter:card" content="" />
