--- a/rooms.html
+++ b/rooms.html
@@ -1,6 +1,5 @@
-<!DOCTYPE>
-<!--[if gt IE 8]><!-->
-<html lang="es"> <!--<![endif]-->
+<!DOCTYPE html>
+<html lang="es" class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
