--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           </ol>
           <div class='carousel-inner'>
             <div class='carousel-item active text-center'>
-              <img class='img-fluid' id="img-uno" src='./images/september/promsep.jpeg' alt='Promociones hoteles septiembre' />
+              <img class='img-fluid' src='./images/september/promsep.jpeg' alt='Promociones hoteles septiembre' />
             </div>
             <div class='carousel-item text-center'>
               <img class='img-fluid' src='./images/september/prom2_23.jpeg' alt='Promociones hoteles septiembre' />
