--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="distribution" content="global"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!------------------------------------------------->
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="Contáctanos - Hotel Punto MX"/>
@@ -20,7 +20,7 @@
     <meta property="og:site_name" content="Contacto - Hotel Punto MX"/>
     <meta property="og:description"
           content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064"/>
-    <meta name="twitter:title" content=""/>
+    <meta name="twitter:title" content="Contacto - Hotel Punto MX"/>
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
     <meta name="twitter:card" content=""/>
