--- a/services.html
+++ b/services.html
@@ -6,11 +6,21 @@
     <title>Servicios | Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Conoce nuestro menú de almohadas, tours y rooms service las 24 hrs."/>
-    <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
+    <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, room service, tours cdmx, vacaciones"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <!------------------------------------------------->
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content="Hotel Punto MX - Conoce nuestro menú de Almohadas"/>
+    <meta property="og:image" content=""/>
+    <meta property="og:url" content=""/>
+    <meta property="og:site_name" content="Servicios y Amenidades - Hotel Punto Mx"/>
+    <meta property="og:description" content="Conoce nuestro menú de almohadas, tours y rooms service las 24 hrs."/>
+    <meta name="twitter:title" content="Hotel Punto MX - Conoce nuestro menú de Almohadas"/>
+    <meta name="twitter:image" content=""/>
+    <meta name="twitter:url" content=""/>
+    <meta name="twitter:card" content=""/>
+    <!-------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -40,18 +50,6 @@
         gtag('config', 'G-BWCT951Z6Z');
     </script>
     <!------------------------------------------------->
-    <!--Completado-->
-    <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content="Hotel Punto MX - Conoce nuestro menú de Almohadas"/>
-    <meta property="og:image" content=""/>
-    <meta property="og:url" content=""/>
-    <meta property="og:site_name" content="Servicios y Amenidades - Hotel Punto Mx"/>
-    <meta property="og:description" content="Conoce nuestro menú de almohadas, tours y rooms service las 24 hrs."/>
-    <meta name="twitter:title" content="Hotel Punto MX - Conoce nuestro menú de Almohadas"/>
-    <meta name="twitter:image" content=""/>
-    <meta name="twitter:url" content=""/>
-    <meta name="twitter:card" content=""/>
-    <!-------------------------------------------->
     <!-----------------------FONT AWESOME--------------------->
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <!-------------------------------------------->
