--- a/contact.html
+++ b/contact.html
@@ -412,7 +412,7 @@
                         <div class="card">
                             <div class="card-header" id="faq_h2">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link btn-block text-left btnHover collapsed" type="button"
+                                    <button class="btn btn-link btn-block text-left btnHover" type="button"
                                             data-toggle="collapse" data-target="#faq_b2" aria-expanded="true"
                                             aria-controls="faq_b2">
                                         1. ¿Qué instalaciones ofrecen?
@@ -430,7 +430,7 @@
                         <div class="card">
                             <div class="card-header" id="faq_h1">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link btnHover" type="button" data-toggle="collapse"
+                                    <button class="btn btn-link btnHover collapsed" type="button" data-toggle="collapse"
                                             data-target="#faq_b1" aria-expanded="true" aria-controls="faq_b1">
                                         2. ¿Cuentan con estacionamiento?
                                     </button>
