--- a/contact.html
+++ b/contact.html
@@ -419,7 +419,8 @@
                                     </button>
                                 </h2>
                             </div>
-                            <div id="faq_b2" class="collapse" aria-labelledby="faq_h2" data-parent="#accordionExample"
+                            <div id="faq_b2" class="collapse show" aria-labelledby="faq_h2"
+                                 data-parent="#accordionExample"
                                  aria-expanded="false">
                                 <div class="card-body">
                                     Contamos con restaurante, cafetería, room service, terraza y gimnasio.
@@ -436,7 +437,7 @@
                                     </button>
                                 </h2>
                             </div>
-                            <div id="faq_b1" class="collapse show" aria-labelledby="faq_h1"
+                            <div id="faq_b1" class="collapse" aria-labelledby="faq_h1"
                                  data-parent="#accordionExample">
                                 <div style="display: none">
                                     ¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con
