--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Contacto - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-          content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064"/>
+    <meta name="description" content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064"/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
@@ -18,8 +17,7 @@
     <meta property="og:image" content=""/>
     <meta property="og:url" content="https://hotelespuntomx.com"/>
     <meta property="og:site_name" content="Contacto - Hotel Punto MX"/>
-    <meta property="og:description"
-          content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064"/>
+    <meta property="og:description" content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064"/>
     <meta name="twitter:title" content="Contacto - Hotel Punto MX"/>
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
