--- a/contact.html
+++ b/contact.html
@@ -406,18 +406,18 @@
                 <div class="col-lg-2 col-md-2"></div>
                 <div class="col-lg-8 col-md-8 col-sm-12">
                     <div class="accordion" id="accordionExample">
-                        <!---FAQ2--->
+                        <!---FAQ1--->
                         <div class="card">
-                            <div class="card-header" id="faq_h2">
+                            <div class="card-header" id="faq_h1">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left btnHover" type="button"
-                                            data-toggle="collapse" data-target="#faq_b2" aria-expanded="true"
-                                            aria-controls="faq_b2">
+                                            data-toggle="collapse" data-target="#faq_b1" aria-expanded="true"
+                                            aria-controls="faq_b1">
                                         1. ¿Qué instalaciones ofrecen?
                                     </button>
                                 </h2>
                             </div>
-                            <div id="faq_b2" class="collapse show" aria-labelledby="faq_h2"
+                            <div id="faq_b1" class="collapse show" aria-labelledby="faq_h1"
                                  data-parent="#accordionExample"
                                  aria-expanded="false">
                                 <div class="card-body">
@@ -427,24 +427,19 @@
                         </div>
                         <!---FAQ1--->
                         <div class="card">
-                            <div class="card-header" id="faq_h1">
+                            <div class="card-header" id="faq_h2">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btnHover collapsed" type="button" data-toggle="collapse"
-                                            data-target="#faq_b1" aria-expanded="true" aria-controls="faq_b1">
+                                            data-target="#faq_b2" aria-expanded="true" aria-controls="faq_b2">
                                         2. ¿Cuentan con estacionamiento?
                                     </button>
                                 </h2>
                             </div>
-                            <div id="faq_b1" class="collapse" aria-labelledby="faq_h1"
+                            <div id="faq_b2" class="collapse" aria-labelledby="faq_h2"
                                  data-parent="#accordionExample">
-                                <div style="display: none">
-                                    ¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con
-                                    la tarifa más baja! +52 (55) 5512 - 7064
-                                </div>
                                 <div class="card-body">
-                                    El hotel no cuenta con estacionamiento en las instalaciones, pero tenemos un
-                                    convenio con el estacionamiento DePrisa ubicado en Isabel la Católica esquina con 16
-                                    de septiembre y tiene un costo de $300.00 MXN por 24 horas.
+                                    Tenemos un convenio con el estacionamiento DePrisa ubicado en Isabel la Católica esquina con 16
+                                    de septiembre y tiene un costo de $300.00 MXN por 24 horas. Ya que el hotel no cuenta con estacionamiento en las instalaciones.
                                 </div>
                             </div>
                         </div>
