Promociones de Septiembre off

--- a/index.html
+++ b/index.html
@@ -339,12 +339,12 @@
 </div>
 <!------------>
 <!-- Modal -->
-<div class="modal fade" id="modalReserv" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+<div class="modal fade" id="modalSep" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
   <div class="modal-dialog my-mod-d my-mod-temp" style="margin-top: 200px;text-align: center;">
     <div class="modal-content my-mod-c">
       <div class="modal-body">
         <!-- carousel -->
-              <img class='img-fluid' id="img-dos" src='./images/september/reservaFit.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
+        <img class='img-fluid' id="img-tres" src='./images/september/reservaFit.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
       </div>
     </div>
   </div>
@@ -1005,7 +1005,7 @@
 <script src="js/particles.js"></script>
 <script>
   $(document).ready(function() {
-    $('#modalReserv').modal('show');
+    $('#modalSep').modal('show');
   });
   /*
   const slider = document.querySelector('.gallery');
