Actualización de links en el apartado de inglés

--- a/ng/cafe.html
+++ b/ng/cafe.html
@@ -367,7 +367,7 @@
                     <div class="col-12">
                         <div class="hotel-content1">
                             <div class="desc" style="justify-content: center; text-align: center;">
-                                <p><a href="./files/carta-cafe-ingles-qr.pdf" target="_blank"
+                                <p><a href="#" target="_blank"
                                       class="btn btn-primary btn-luxe-primary">Menu <i class="ti-angle-right"></i></a>
                                 </p>
                             </div>
