--- a/ng/roomservice.html
+++ b/ng/roomservice.html
@@ -313,7 +313,7 @@
                             <p>Enjoy the comfort of your stay with our</p>
                             <h1 class="text-center">Room Service</h1>
                             <p>
-                                <a href="./files/menus/110722_M_RoomService.pdf" target="_blank"
+                                <a href="../files/menus2024/menu-roomservice-2024.pdf" target="_blank"
                                    class="btn btn-primary btn-luxe-primary fontWhite" style="color: #FFF!important;">Room
                                     Service<i class="ti-angle-right"></i>
                                 </a>
